Fixes/changes to dunit framework for GemXD tests
 * fixing AnyCyclicBarrier to correctly wait for all parties; added a destroy method
 * correct logger/log-level access to create logger objects on remote VMs on demand;
   the logger object is not Serializable as is, so marking it as transient
 * change into separate VM specific directory to allow clean parallel runs
 * made JVM arguments consistent with the default parameters in snappy-store servers